# xfce4-rs

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE  README.md  generate.sh
gir-files.xfce/: Libxfce4kbdprivate-3.0.gir  Libxfce4ui-2.0.gir  Libxfce4util-1.0.gir  Xfconf-0.gir  fix.sh
libxfce4kbd-private/: Cargo.toml  Gir.toml
libxfce4kbd-private/src/: lib.rs  shortcut.rs
libxfce4kbd-private/src/auto/: mod.rs  shortcut.rs  shortcuts_provider.rs  versions.txt
libxfce4kbd-private/sys/: Cargo.toml  Gir.toml  build.rs
libxfce4kbd-private/sys/src/: lib.rs
libxfce4kbd-private/sys/src/auto/: versions.txt
libxfce4kbd-private/sys/tests/: abi.rs  constant.c  layout.c  manual.h
libxfce4ui/: Cargo.toml  Gir.toml
libxfce4ui/src/: lib.rs
libxfce4ui/src/auto/: mod.rs  versions.txt
libxfce4ui/sys/: Cargo.toml  Gir.toml
libxfce4ui/sys/src/: lib.rs
libxfce4ui/sys/src/auto/: versions.txt
libxfce4ui/sys/tests/: abi.rs  constant.c  layout.c  manual.h
libxfce4util/: Cargo.toml  Gir.toml
libxfce4util-sys/: Cargo.toml
libxfce4util-sys/src/: lib.rs
libxfce4util-sys/tests/: abi.rs  layout.c  manual.h
libxfce4util/src/: consolekit.rs  functions.rs  lib.rs  systemd.rs
libxfce4util/src/auto/: consolekit.rs  functions.rs  kiosk.rs  mod.rs  systemd.rs  versions.txt
libxfce4util/sys/: Cargo.toml  Gir.toml  build.rs
libxfce4util/sys/src/: lib.rs
libxfce4util/sys/tests/: constant.c
libxfce4util/tests/: functions.rs  util.rs
xfconf/: Cargo.toml  Gir.toml
xfconf-sys/src/: lib.rs
xfconf-sys/tests/: abi.rs
xfconf/src/: array.rs  binding.rs  channel.rs  conv.rs  functions.rs  lib.rs  types.rs
xfconf/src/auto/: channel.rs  functions.rs  mod.rs
xfconf/sys/: Cargo.toml  Gir.toml
xfconf/sys/src/: lib.rs
xfconf/sys/tests/: constant.c  layout.c  manual.h
xfconf/tests/: functions.rs
