[package]
name = "libxfce4util-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.libxfce4util_1]
name = "libxfce4util-1.0"
version = "4.18"

[package.metadata.system-deps.libxfce4util_1_0]
name = "libxfce4util-1.0"
version = "4.18"

[package.metadata.system-deps.libxfce4util_1_0.v4_19_1]
version = "4.19.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true
features = ["dox"]

[lib]
name = "libxfce4util_sys"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
v4_19_1 = []
