[package]
name = "xfconf"
version = "0.1.0"
edition = "2021"
license.workspace = true

[package.metadata.docs.rs]
all-features = true
# For build.rs scripts
rustc-args = ["--cfg", "docsrs"]
# For rustdoc
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitflags = "2.2"
ffi = { package = "xfconf-sys", path = "sys" }
glib = "0.18"
libc = "0.2"

[features]
v4_21_1 = ["ffi/v4_21_1"]
v4_21_2 = ["v4_21_1", "ffi/v4_21_1"]
