[package]
name = "libxfce4kbdprivate-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.libxfce4kbd_private_3]
name = "libxfce4kbd-private-3"
version = "4.20"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
all-features = true

[lib]
name = "libxfce4kbdprivate_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.libxfce4ui-sys]
git = "ADD GIT REPOSITORY URL HERE"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
