[package]
name = "xfconf-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.license]
workspace = true

[package.metadata.system-deps.libxfconf_0]
name = "libxfconf-0"
version = "4.20"

[package.metadata.system-deps.libxfconf_0.v4_21_1]
version = "4.21.1"

[package.metadata.system-deps.libxfconf_0.v4_21_2]
version = "4.21.2"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true
features = ["dox"]

[lib]
name = "xfconf_sys"

[dependencies]
glib-sys = "0.18"
gobject-sys = "0.18"
libc = "0.2"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
v4_21_1 = []
v4_21_2 = ["v4_21_1"]
